save cursor changes
