# internal/app/handler/permission.go
@@ -14,8 +14,8 @@ func (h *Handler) ListPermissions(
 	request openapi.ListPermissionsRequestObject,
 ) (openapi.ListPermissionsResponseObject, error) {
 	qp := permission_usecase.AppQueryParams{
-		Page:    pntr.DerefStr(request.Params.Page),
-		Rows:    pntr.DerefStr(request.Params.Rows),
+		Cursor:  pntr.DerefStr(request.Params.Cursor),
+		Limit:   pntr.DerefStr(request.Params.Limit),
 		OrderBy: pntr.DerefStr(request.Params.OrderBy),
 		ID:      pntr.DerefStr(request.Params.PermissionId),
 		Name:    pntr.DerefStr(request.Params.Name),
